--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
     },
     "scripts": {
         "start": "expo start",
+        "web": "expo start --web",
         "build": "expo build:web",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
