--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,30 +1,27 @@
 {
-    "name": "mobile-app",
-    "version": "1.0.0",
-    "main": "index.js",
-    "dependencies": {
-      "expo": "^52.0.35",
-      "expo-status-bar": "^2.0.1",
-      "react": "^18.3.1",
-      "react-dom": "^18.3.1",
-      "react-native": "^0.76.7",
-      "react-native-web": "^0.19.13",
-      "react-native-svg": "^14.0.0"
-    },
-    "devDependencies": {
-      "@react-native-community/cli": "^15.1.3",
-      "prettier": "^3.0.3"
-    },
-    "scripts": {
-      "start": "expo start",
-      "web": "expo start --web",
-      "build": "expo export --platform web",
-      "format": "prettier --write .",
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "description": ""
-  }
-  
+  "name": "mobile-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "expo": "^52.0.35",
+    "expo-status-bar": "^2.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.7",
+    "react-native-web": "^0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
+  },
+  "devDependencies": {
+    "@react-native-community/cli": "^15.1.3"
+  },
+  "scripts": {
+    "start": "expo start",
+    "web": "expo start --web",
+    "build": "expo export --platform web",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
