--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,7 @@
       "android": "react-native run-android",
       "ios": "react-native run-ios",
       "web": "expo start --web",
-      "build": "npx expo export:web"
+      "build": "npx expo export"
     },
     "dependencies": {
       "expo": "^52.0.35",
